crates/keron-lang/tests/corpus/errors/check/shell_invalid_kind.keron
val refresh: Shell = shell(kind = "fish", name = "refresh", script = "echo ok")
